# writeUp

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  README.md  backend.Dockerfile  docker-compose.yml  log-config.yml
.github/workflows/: build.yaml
client/: .dockerignore  .eslintrc.json  frontend.Dockerfile  next.config.js  package.json  posts.json  tsconfig.json  vite.config.ts
client/public/: index.html  manifest.json
client/public/locales/de/: common.json
client/public/locales/en/: common.json
client/src/: app.tsx  i18n.ts  index.tsx  main.tsx  router.tsx
client/src/components/: codeBlock.tsx  editor.tsx  index.ts  languageSelector.tsx  pageFooter.tsx  pageHeader.tsx  protectedRoute.tsx  router.tsx
client/src/components/editor/: bodyEditor.tsx  confirmDeletionDialog.tsx  editor.tsx  editorPane.tsx  index.ts  menuStrip.tsx  newNoteForm.tsx  preview.tsx  sidebar.tsx  sidebarElement.tsx  tagEditor.tsx  titleEditor.tsx  widget.tsx
client/src/components/layouts/: defaultLayout.tsx  editorLayout.tsx  index.ts  mainLayout.tsx
client/src/context/: authContext.tsx  editorContext.tsx  index.ts  keyContext.tsx  systemContext.tsx  userContext.tsx
client/src/hooks/: index.ts  useAuth.ts  useAuthenticatedRedirect.ts  useEditor.ts  useKeyboardShortcut.ts  useKeys.ts  useLocalStorage.ts  useMnemonic.ts  useMountEffect.ts  useSystem.ts  useUser.ts
client/src/lib/: api.ts  getHash.ts  index.ts  useAsync.ts  useUser.ts
client/src/locales/de/: common.json  errors.json
client/src/locales/en/: common.json
client/src/pages/: _app.tsx  about.tsx  app.tsx  editor.tsx  index.ts  index.tsx  landing.tsx  login.tsx  logout.tsx  noMatch.tsx  notFound.tsx  register.tsx  signup.tsx  test.tsx
client/src/pages/api/: url.ts
client/src/pages/app/: index.tsx  new.tsx
client/src/pages/auth/: login.tsx  logout.tsx  register.tsx
client/src/providers/: userContextProvider.tsx
client/src/styles/: _mixins.scss  _reset.scss  _utils.scss  _variables.scss  app.scss  globals.css  globals.scss  index.scss  login.module.scss
client/src/styles/pages/: login.module.scss  (+1 more)
client/src/tests/: app.test.tsx
client/src/types/: index.ts  inputValue.ts  note.ts  user.ts
client/src/utils/: index.ts  strings.ts
client/src/values/: index.ts  protectedRoutes.ts  publicRoutes.ts
src/: db_access.rs  main.rs
src/storage/: error.rs  interface.rs  mod.rs
src/storage/mongodb/: database.rs  mod.rs  notes.rs  schema.rs  sessions.rs  users.rs
src/web/: auth.rs  error.rs  mod.rs  note.rs  share.rs  user.rs
(+9 files in other folders)
