[package]
name = "writeUp"
description = "Backend to the note-taking webapp 'writeUp'"
version = "0.4.5"
authors = ["SNiclas <dev@s-niclas.eu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Basics
simple_on_shutdown = "1.0.0"
log = "0.4.16"
log4rs = "1.0.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Web-Server
actix-rt = "2.6.0"
actix-web = "4.0.1"
actix-cors = "0.6.0"
# Authentication
argonautica = { version = "0.2", features = ["serde"] }
jsonwebtoken = "8.0.1"
chrono = "0.4.19"
thiserror = "1.0"
# Database
mongodb = "2.1.0"
futures = "0.3.21"